--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
 
         <aside class="side-profile">
-          <div ></div><img src="sayani pal 3.jpeg" class="big-avatar card" alt="Sayani Pal ">SP</div>
+          <div ></div><img src="sayani pal 3.jpeg" >SP</div>
           <div class="card" style="width:100%">
             <h4 style="margin:0">Education</h4>
             <div class="muted" style="font-size:14px;margin-top:6px">BSc in Advanced Networking and Cyber Security<br>Swami Vivekananda University — 2023</div>
@@ -288,4 +288,5 @@ function openLink(url){ if(url.startsWith('#')) return; window.open(url,'_blank'
 qs('#year').textContent = new Date().getFullYear();
 </script>
 </body>
+
 </html>
